# hpc_game

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.cmake  main.cpp  run.sh
hello_neon/: CMakeLists.txt
hello_sve/: CMakeLists.txt
include/neon/: debug.hpp  func.h
include/opencv2/: cvconfig.h
output/: hello_eigen  hello_neon
src/hello_eigen/: CMakeLists.txt  main.cpp
src/hello_neon/: CMakeLists.txt  main.cpp  resize.cpp
src/hello_sve/: CMakeLists.txt  main.cpp
